css fixes inc about me spacing

--- a/src/Views/Final/AboutMe/AboutMe.css
+++ b/src/Views/Final/AboutMe/AboutMe.css
@@ -9,6 +9,11 @@
     filter: drop-shadow(15px 15px 4px rgb(6, 72, 108));
 }
 
+.AboutMeFinal .content {
+    width: 80%;
+    margin: 0 auto;
+}
+
 .AboutMeFinal h3{
     text-align: center;
 }
@@ -18,7 +23,11 @@
     align-content: center;
 }
 
+.AboutMeFinal .content .life-skills ul {
+    padding-inline-start: 0;
+}
+
 .no-bullets {
     list-style: none;
-    margin-left: 0;
+    /* margin-left: 0; */
 }
