--- a/src/Views/Final/Portfolio/Portfolio.css
+++ b/src/Views/Final/Portfolio/Portfolio.css
@@ -9,6 +9,10 @@
     filter: drop-shadow(15px 15px 4px rgb(6, 72, 108));
 }
 
+.PortfolioFinal h3 {
+    text-align: center;
+}
+
 .no-bullets {
     list-style: none;
 }
